	13413 Naght_Seiger_Twin_Edge_	5% chance to activate defense bypassing on normal (non boss) targets for 5 seconds (no visual).
	1185 Violet_Fear		5% chance to activate defense bypassing on normal (non boss) targets for 5 seconds (no visual).
	2385 Recuvative_Armor		Should trigger HP/SP return with magical kills as well.

=======================
2009/05/29
	* Rev. 13825 Removed an extra comma from chocolate_pie. [L0ne_W0lf]
	* Rev. 13824 Various item database updates of my own :D [L0ne_W0lf]
	- Updated items that increase heal effectiveness to use bHealPower.
	- Added Fishing gear (has no effect and is currently not used)
	- Added some missing items from the episode 13.1 update.
	- Updated AEGIS names for various episode 13.1 items.
	* Various small item_db fixes [Playtester]
	- 11.3 typo fixes
	- fixed Phantom Spear being backwards (now you need the seal to decrease the self-confusion)
	- added missing bHealPower bonuses
	- Base Guitar and Foot of Sea Witch now autocast on target rather than self
	- Valkyrie's Shoes, Ragamuffin Manteau, Valkyrie's Manteau, Asprika and Vanilmirth Hat are now unbreakable
	- Asprika and Vanilmirth Hat make no longer your armor unbreakable
2009/05/26
	* Some mob_skill_db updates [Playtester]
	- fixed monsters trying to use Exile on self
	- removed Bowling Bash from Thanatos (he doesn't use it anymore)
2009/05/19
	* Updated item_db and skill_cast_db [Playtester]
	- fixed Sabbath giving 500 Crit instead of 50 Crit
	- updated the comment on Dragon Fear in skill_cast_db
	* Fixed Coma chances being 10 times too high [Playtester]
2009/05/18
	* NPC skills now use the official default durations for status changes [Playtester]
2009/05/15
	* Rev. 13784 Updated walk speed and aspd of Okolnir mobs, also fixed the flower mob modes. [L0ne_W0lf]
	* Rev. 13779 Minor database updates related to the Falicious Okolnir dungeon. [L0ne_W0lf]
	- Corrected the names of Andvari's Ring and Valkyrie's Token.