@@ -978,14 +978,14 @@ enum e_skill {
 	NPC_HELLPOWER,	
 	NPC_WIDEHELLDIGNITY,
 	NPC_INVINCIBLE,
-	NPC_INVINCIBLEOFF, */
+	NPC_INVINCIBLEOFF,
+	*/
 	NPC_ALLHEAL = 687,
-	/*
-	GM_SANDMAN = 688,
-	CASH_BLESSING,
+	//GM_SANDMAN = 688,
+	CASH_BLESSING = 689,
 	CASH_INCAGI,
 	CASH_ASSUMPTIO,
-
+	/*
 	ALL_CATCRY = 692,
 	ALL_PARTYFLEE,
 	ALL_ANGEL_PROTECT,
